<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="osp_try_again">Try again</string>
    <string name="osp_next">Next</string>
    <string name="nationalid_error_invalid_image_size">Invalid image size, image size should be between 50KB and 1MB, and image dimension should be between 460 * 460 and 4096 * 4096</string>
    <string name="nationalid_warn">Warning</string>
    <string name="osp_ok">OK</string>

    <!-- error -->
    <string name="net_work_error">Network abnormality, please check the network and try again!</string>
    <string name="get_session_token_error">Unable to obtain session token.</string>

    <!-- dialog loading -->
    <string name="dialog_loading">Loading</string>
    <string name="dialog_loading_content">We have received your request and are working on it.</string>

    <string name="refresh_loading_title">Loading</string>
    <string name="refresh_loading_text">Your application is under process, please wait a while then click the refresh button.</string>
    <string name="refresh_loading_button">Refresh</string>

    <!-- start node -->
    <string name="start_title">Welcome!</string>
    <string name="start_subtitle">Let\'s confirm your identity by collecting basic information in a few minutes.</string>
    <string name="start_privacy1">By clicking on the button below, you consent to Advance AI, our vendor, collecting, using, and utilizing their service providers to process your identity information, including biometric information, for the purposes of identity verification, fraud prevention, and product optimization, in accordance with their </string>
    <string name="start_privacy2">Privacy Policy.</string>
    <string name="start_button">Get started</string>

    <!-- common dialog -->
    <string name="dialog_back_title">Warning</string>
    <string name="dialog_back_content">Want to end the current process?</string>
    <string name="dialog_back_yes">Stay on current page</string>
    <string name="dialog_back_no">Quit</string>

    <!-- selfie 2d -->
    <string name="selfie_2d_title">Take a selfie photo</string>
    <string name="selfie_2d_subtitle">Prepare for your selfie</string>
    <string name="selfie_2d_content">Keep enough light;\nKeep a clean background;\nMake sure that the face is not blocked.</string>
    <string name="selfie_2d_capture">Start</string>
    <string name="selfie_2d_retry_title">Try again</string>
    <string name="selfie_2d_retry_content">The selfie captured may not meet our image quality standards, which could potentially impact your verification process. Would you like to retake your selfie?</string>
    <string name="selfie_2d_yes">Yes</string>
    <string name="selfie_2d_move_forward">No, Move Forward.</string>

    <!-- selfie 3d -->
    <string name="selfie_3d_intro_title">Take a selfie photo</string>
    <string name="selfie_3d_intro_content">Here to Guide You with Suggestions!</string>
    <string name="selfie_3d_intro_btn">I\'m Ready</string>
    <string name="selfie_3d_state_success">Successfully verified by 3D liveness detection!</string>
    <string name="selfie_3d_state_failed">We were unable to verify your identity, please contact support.</string>
    <string name="selfie_3d_error">Liveness detection fail</string>

    <!-- result node -->
    <string name="result_success_title">Completed</string>
    <string name="result_success_content">Congratulations! You have been successfully verified.</string>
    <string name="result_decline_title">Sorry</string>
    <string name="result_decline_content">We were unable to verify your identity. Please contact support.</string>
    <string name="result_pending_title">Pending</string>
    <string name="result_pending_content">The verification process has begun, but isn\'t finished. Please wait…</string>
    <string name="result_button">Done</string>

    <!-- document node -->
    <string name="doc_intro_title">Submit an ID document</string>
    <string name="doc_intro_content">Here are a few quick tips to get it right on the first try！</string>
    <string name="doc_select_country_title">Select the issuing country</string>
    <string name="doc_select_country_subtitle">You will take a photo of an ID document issued by the Issuing country.</string>
    <string name="doc_select_type_title">Select document type</string>
    <string name="doc_select_type_subtitle">We require a photo of a government ID to verify your identity.</string>
    <string name="doc_upload_title">Upload documents</string>
    <string name="doc_failure_subtitle">We were unable to verify your identity, please contact support.</string>
    <string name="doc_failure_content">*The information uploaded by the user is under 18 years old, so we cannot provide services.</string>
    <string name="doc_upload_back_size_tip">Need to upload the back side</string>
    <string name="doc_upload_popup_take_photo">Take Photo</string>
    <string name="doc_upload_popup_upload_file">Upload File</string>
    <string name="doc_upload_replace_image">Replace image</string>
    <string name="doc_upload_replace_image_front">Replace front image</string>
    <string name="doc_upload_replace_image_back">Replace back image</string>
    <string name="doc_upload_tip_image_front">Click here to upload your %{cardName} Front</string>
    <string name="doc_upload_tip_image_back">Click here to upload your %{cardName} Back</string>
    <string name="doc_retry_title">Retry Chances Left:</string>
    <string name="doc_retry_content">Failed, you have exceeded the maximum number of retries!</string>
    <string name="doc_retry_button">Try again</string>

    <!-- facetec retry -->
    <string name="retry_times_left">Retry Chances Left: %d</string>

    <string name="camera_permission_content">Camera permissions disabled.\nPlease check your operating system and browser settings.</string>


    <!-- FaceTec -->
    <string name="FaceTec_action_im_ready">I\'m ready</string>
    <string name="FaceTec_action_ok">OK</string>
    <string name="FaceTec_action_try_again">Try again</string>
    <string name="FaceTec_camera_permission_enable_camera">Enable camera</string>
    <string name="FaceTec_camera_permission_header">Enable camera</string>
    <string name="FaceTec_camera_permission_launch_settings">LAUNCH SETTINGS</string>
    <string name="FaceTec_camera_permission_message_auth">Your camera is disabled. Tap below to edit your settings.</string>
    <string name="FaceTec_camera_permission_message_enroll">Please tap the button below to enable your selfie camera.</string>
    <string name="FaceTec_feedback_center_face">Center your face</string>
    <string name="FaceTec_feedback_face_not_found">Frame your face</string>
    <string name="FaceTec_feedback_face_not_looking_straight_ahead">Look straight ahead</string>
    <string name="FaceTec_feedback_face_not_upright">Hold your head straight</string>
    <string name="FaceTec_feedback_hold_steady">Hold steady</string>
    <string name="FaceTec_feedback_move_phone_away">Move away</string>
    <string name="FaceTec_feedback_move_phone_closer">Move closer</string>
    <string name="FaceTec_feedback_move_phone_to_eye_level">Move phone to eye level</string>
    <string name="FaceTec_feedback_use_even_lighting">Light face more evenly</string>
    <string name="FaceTec_initializing_camera">Securing camera feed</string>
    <string name="FaceTec_instructions_header_ready_1">Get ready for</string>
    <string name="FaceTec_instructions_header_ready_2">Your video selfie</string>
    <string name="FaceTec_instructions_message_ready_1">Frame your face in the oval,</string>
    <string name="FaceTec_instructions_message_ready_2">Press I\'m ready &amp; Move closer</string>
    <string name="FaceTec_presession_brighten_your_environment">Brighten your environment</string>
    <string name="FaceTec_presession_conditions_too_bright">Conditions too bright</string><!---->
    <string name="FaceTec_presession_frame_your_face">Frame your face in the oval</string>
    <string name="FaceTec_presession_hold_steady_1">Hold steady for: 1</string>
    <string name="FaceTec_presession_hold_steady_2">Hold steady for: 2</string>
    <string name="FaceTec_presession_hold_steady_3">Hold steady for: 3</string>
    <string name="FaceTec_presession_neutral_expression">Neutral expression, no smiling</string>
    <string name="FaceTec_presession_position_face_straight_in_oval">Look straight ahead</string>
    <string name="FaceTec_presession_remove_dark_glasses">Remove dark glasses</string>
    <string name="FaceTec_result_facescan_upload_message">Still Uploading…</string>

    <string name="FaceTec_result_success_message">Selfie captured!</string>
    <string name="FaceTec_retry_header">Let\'s try that again</string>
    <string name="FaceTec_retry_ideal_image_label">Ideal pose</string>
    <string name="FaceTec_retry_instruction_message_1">Neutral expression, no smiling</string>
    <string name="FaceTec_retry_instruction_message_2">Please use ideal pose &amp; lighting</string>
    <string name="FaceTec_retry_instruction_message_3">Too blurry, clean camera</string>
    <string name="FaceTec_retry_subheader_message">We need a clearer video selfie</string>
    <string name="FaceTec_retry_your_image_label">Your selfie</string>

</resources>