<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        android:src="@drawable/arrow_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivBack"
        android:layout_centerHorizontal="true"
        android:src="@drawable/enable_camera" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivCamera"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/FaceTec_camera_permission_enable_camera"
        android:textAppearance="@style/OSPHeadingFont" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/camera_permission_content"
        android:textAppearance="@style/OSPContentFont" />

    <com.aai.core.views.OSPButton
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/osp_button_height"
        android:layout_above="@+id/logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingTop="11dp"
        android:paddingBottom="10dp"
        app:buttonText="@string/osp_try_again"
        app:buttonTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>